--- a/src/AppBundle/Resources/views/Country/index.html.twig
+++ b/src/AppBundle/Resources/views/Country/index.html.twig
@@ -8,6 +8,6 @@
 {% endblock %}
 {% block content %}
     {% for country in countries %}
-        <a class="btn btn-default col-lg-4" href="{{ path('countryView', { 'countryName': country.name }) }}" role="button">{{ country.name }} national football team</a>
+        <a class="btn btn-default col-lg-4" href="{{ path('countryView', { 'countryName': country.name }) }}" role="button">{{ country.name }}</a>
     {% endfor %}
 {% endblock %}
