Fixed grammatical errors

--- a/src/AppBundle/Resources/views/Team/view.html.twig
+++ b/src/AppBundle/Resources/views/Team/view.html.twig
@@ -8,5 +8,5 @@
     {{ team.description }}
     <br><br>
     <p><a class="btn btn-default" href="{{ path('playerIndex', { 'teamName': team.name }) }}" role="button">Team players</a></p>
-    <p><a class="btn btn-default" href="{{ path('coachIndex', { 'teamName': team.name }) }}" role="button">Team coachs</a></p>
+    <p><a class="btn btn-default" href="{{ path('coachIndex', { 'teamName': team.name }) }}" role="button">Team coaches</a></p>
 {% endblock %}
